# first-data-website

./: .replit  README.md  app.py  database.py  pyproject.toml
static/: style.css
templates/: application_form.html  application_submited.html  home.html  jobitem.html  jobspage.html
